--- a/index.html
+++ b/index.html
@@ -26,12 +26,10 @@
     </nav>
     <main>
         <article>
-            <h1 id="h1main">História do Mascote do Android</h1>
+            <h1>História do Mascote do Android</h1>
             <p>Provavelmente você sabe que o sistema operacional <strong>Android</strong>, mantido pelo <strong>Google</strong> é um dos mais utilizados para dispositivos móveis em todo o mundo. Mas tavez você não saiba que o seu simpático mascote tem um nome e uma história muito curiosa? Pois acompanhe esse artigo para aprender muita coisa sobre esse robozinho.</p>
             <br>
-            <div class="bordah2">
-                <h2>A primeira versão</h2>
-            </div>
+            <h2>A primeira versão</h2>
             <p class="pborda">
                 A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado <a class="externall" href="https://androidcommunity.com/dan-morrill-shows-us-the-android-mascot-that-almost-was-20130103/" target="_blank" rel="external"
                 > Dan Morrill </a>. Ele conta que abriu o <a href="https://inkscape.org/pt-br/" target="_blank" rel="external">Inkscape</a> (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.
@@ -106,8 +104,8 @@
 
                                 
 
-        </main>
-        <footer>Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema Android e seu simpático mascote.</footer>
+</main>
+<footer>Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema Android e seu simpático mascote.</footer>
     
 
 </body>
